--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
   Температура в цельсиях: "Temperature in Celsius"
   Узнайте прогноз погоды в городе на ближайшее время: "Learn the weather in any city for near time"
   Введите название города: "Enter the city name:"
-  на английском языке: "using English:"
+  на английском или русских языках: "using English or Russian:"
   скорость ветра(м/с): "wind speed(m/s)"
   Найти: "Find a city"
   Выйти: "Sign out"
