--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
   Температура в цельсиях: "Температура цельсиях"
   Узнайте прогноз погоды в городе на ближайшее время: "Узнайте прогноз погоды в городе на ближайшее время"
   Введите название города: "Введите название города:"
-  на английском языке: "на английском языке:"
+  на английском или русских языках: "на английском или русских языках:"
   скорость ветра(м/с): "скорость ветра(м/с)"
   Найти: "Найти город"
   Выйти: "Выйти"
