--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
   Температура в цельсиях: "Температура цельсиях"
   Узнайте прогноз погоды в городе на ближайшее время: "Узнайте прогноз погоды в городе на ближайшее время"
   Введите название города: "Введите название города:"
-  на английском или русских языках: "на английском или русских языках:"
+  на английском языке: "на английском языке:"
   скорость ветра(м/с): "скорость ветра(м/с)"
   Найти: "Найти город"
   Выйти: "Выйти"
@@ -18,3 +18,7 @@ ru:
   на ближайшее время: "на ближайшее время"
   применить: "применить"
   выберите язык: "выберите язык"
+  Name: 'логин'
+  password: 'пароль'
+  Логин: 'Логин'
+  Создать пользователя: 'Создать пользователя'
